# miclaw_api_bridge

./: .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: docker.yml  openwrt.yml  release.yml
docker/: linux-appimage.Dockerfile
openwrt/: README.md  build-openwrt.sh
openwrt/files/etc/config/: miclaw_api_bridge
openwrt/files/etc/init.d/: miclaw_api_bridge
scripts/: build-binaries.sh  build-linux-appimage.sh  build-windows-nsis.sh
src/: App.vue  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  mimo.rs  server.rs  state.rs  storage.rs  usage.rs
src-tauri/src/auth/: login.rs  mod.rs  refresh.rs  two_factor.rs
src-tauri/src/proxy/: anthropic.rs  mod.rs  openai.rs  transport.rs
src-tauri/tests/: smoke_login.rs
src/api/: index.ts
src/views/: AdminLogin.vue  ApiKeys.vue  Dashboard.vue  Login.vue  Logs.vue  Usage.vue
